working version 1.0 fixed

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
           <p>
-            Length <input type="number" id="Length"></input> &nbsp;
+            Length (8-128) <input type="number" id="Length"></input> &nbsp;
             Uppercase <input type="checkbox" id="uppercaseValue"></input> &nbsp;
             Lowercase <input type="checkbox" id="lowercaseValue"></input> &nbsp;
             Numeric <input type="checkbox" id="numericValue"></input> &nbsp;
